--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@cloudflare/vitest-pool-workers": "^0.12.14",
     "@types/node": "^25.3.0",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.18",
+    "vitest": "~3.2.0",
     "wrangler": "^4.67.0"
   }
 }
