--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,7 +7,8 @@
   "assets": {
     "directory": "./ui/dist",
     "binding": "ASSETS",
-    "not_found_handling": "single-page-application"
+    "not_found_handling": "single-page-application",
+    "run_worker_first": ["/ingest*", "/mcp*", "/llms.txt", "/https:*", "/https%3A*", "/https%3a*"]
   },
   // "routes": [
   //   { "pattern": "yourdomain.com/*", "custom_domain": true }
